force-app/main/default/objects/Training_Group_Member__c/Training_Group_Member__c.object-meta.xml
<CustomObject>
    <label>LogicLearn Group Member</label>
    <nameField>
        <displayFormat>LLGM-{00000}</displayFormat>
        <label>Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LogicLearn Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>