force-app/main/default/objects/Training_Group_Member__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>LogicLearn Group</label>
    <referenceTo>Training_Group__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>MasterDetail</type>
</CustomField>