force-app/main/default/objects/Training_Group_Member__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>User</fullName><default>true</default><label>User</label></value>
        <value><fullName>Profile</fullName><default>false</default><label>Profile</label></value>
        <value><fullName>LogicLearn Group</fullName><default>false</default><label>LogicLearn Group</label></value>
    </valueSetDefinition></valueSet>
</CustomField>