force-app/main/default/objects/Training_Group_Member__c/fields/Nested_Group__c.field-meta.xml
<CustomField>
    <fullName>Nested_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nested LogicLearn Group</label>
    <referenceTo>Training_Group__c</referenceTo>
    <relationshipLabel>Included In Groups</relationshipLabel>
    <relationshipName>Included_In_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>