force-app/main/default/objects/Training_Group_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LogicLearn Group Memberships</relationshipLabel>
    <relationshipName>LogicLearn_Group_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>